src/tests/snapshots/tera__tests__parser__parser_errors@macro_default_non_literal_in_map.txt.snap
---
source: src/tests/parser.rs
expression: res.unwrap_err()
input_file: src/tests/parser_inputs/errors/macro_default_non_literal_in_map.txt
---
 Syntax error --> [macro_default_non_literal_in_map.txt:1:21]
  |
1 | {% macro array(array={"hello": a}) %}{% endmacro %}
  |                      ^---
  = Invalid default argument: this map should only contain literal values.
